--- a/wiki/30A_OpenEVSE.wiki
+++ b/wiki/30A_OpenEVSE.wiki
@@ -67,8 +67,17 @@ You will need:
 
 http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0731_1024x1024.JPG
 
+
+
+  * Your enclosure can be built with the AC Cord Left J1772 Right or opposite. Determine which works best for your installation and flip the mounting plate appropriately.
+
+*Example AC Cord Left - J1772 Right*
 [http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0711_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0711_medium.JPG]
+
+*Example AC Cord Right - J1772 Left*
 [http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0712_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0712_medium.JPG]
+
+
 [http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0742_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0742_medium.JPG]
 [http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0741_1024x1024.JPG http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_0741_medium.JPG]
 
