--- a/wiki/J1772CableSources.wiki
+++ b/wiki/J1772CableSources.wiki
@@ -7,10 +7,12 @@
 || Part Number || Description || Manufacturer || Level || Max Current || UL || Length || Price || Link ||
 || A3435-PEV || J1772 || Leviton || L1/L2 || 30A || Yes || 20' || $173.36 + free shipping || http://store.leviton.com/Compliant-Electric-Vehicle-Connector-A3435-PEV/dp/B00912OT00 <br /> Pictures of: http://pics.256.com/2012/20120908_j1772/ ||
 || A2055-PEV || J1772 || Leviton || L1/L2 || 15A || Yes || 25' || $134.14 || http://store.leviton.com/Electric-Vehicle-Charge-Connector-A2055-PEV/dp/B009UCE7EE#.URHRL333JgE ||*
-|| || Plug with 8m Cord || Dostar || L1/L2 || 32A || No || 8m (26 feet) || $149 + ~$40 shipping || http://www.emotorwerks.com/products/online-store/product/show/38-j1772-plug-32a-wire-8-meters ||
+|| || Plug with 8m Cord || Dostar || L1/L2 || 32A || No || 8m (25 feet) || $149 + ~$40 shipping || http://www.emotorwerks.com/products/online-store/product/show/38-j1772-plug-32a-wire-8-meters ||
+|| || Plug with 8m Cord || Dostar || L1/L2 || 50A (see *note) || No || 8m (25 feet) || $219 + ~$40 shipping || http://www.emotorwerks.com/products/online-store/product/show/38-j1772-plug-32a-wire-8-meters |
 || || Plug alone || Dostar || L1/L2 || 50A || No || none || $110 || http://www.tucsonev.com/index.html ||
 || || Plug with Cord || Dostar || L1/L2 || 30A || No || 20' || $140 || http://www.tucsonev.com/index.html ||
 
+(-**Note* Dostar downrated 75A plugs to 50A)
 
 *International*
 || || J-1772 with 3m cord || EV Power || L1/L2 || 32A ||  || 3m || $145 || http://ev-power.com.au/webstore/index.php/sae-charging-plugs-sockets/ev-charging-plug-sae-j1772.html ||
