Edited wiki page Users_Guide through web user interface.

--- a/wiki/Users_Guide.wiki
+++ b/wiki/Users_Guide.wiki
@@ -9,6 +9,12 @@ http://www.mysafetysign.com/img/lg/S/High-Voltage-Danger-Sign-S-2250.gif
 
 <b><font color=red>Important </font></b> Always Disconnect your charging station from power before performing an inspection and/or maintenance. 
 
+<b><font color=red>Warning </font></b>Do not install OpenEVSE near flammable, explosive, or combustible materials. Do not locate or store flammable, explosive, or combustible materials near the charging station.
+
+<b><font color=red>Warning </font></b>Do not operate the EVSE with a visibly damaged cable or if the enclosure or connector is broken, open, cracked, or shows any other signs of damage.
+
+<b><font color=red>Warning </font></b>Adult supervision is required when building, operating, servicing or inspecting.
+
 = Specifications =
 
 || || Built || Quick Kit || DIY Through Hole ||
@@ -28,6 +34,19 @@ http://www.mysafetysign.com/img/lg/S/High-Voltage-Danger-Sign-S-2250.gif
 || IO pins || I2C and FTDI || I2C and FTDI || I2C and FTDI ||
 || Programmer || ISP || ISP || ISP ||
 || Serial ||  FTDI || FTDI || FTDI || 
+
+==Power==
+
+OpenEVSE can be powered by a single phase in the following configurations:
+
+  * 240VAC single-phase: L1, L2, and safety ground
+  
+  * 240VAC split-phase: The two phases must both measure 120V AC to ground.
+  * 208VAC 3-phase, wye-connected: Any 2 phases and safety ground
+  * 230V AC single-phase Line, Neutral, and EARTH
+  * 50 or 60Hz
+
+*Note* - OpenEVSE supports 3 phase charging stations, the controller is powered by a single phase and 3 phases are provided to the Electric Vehicle. 
 
 = LCD =
 ==Colors==
@@ -58,4 +77,45 @@ The Menu options require an LCD and a button switch. The menu operates on Long p
 
   * Select the desired value Press and hold.
 
+= Safety features =
+
+OpenEVSE supports all the safety features required (and a few more) by standards documents for Electric Vehicle Charging from SAE J1772, NEC and UL.
+
+•UL2251 Standard for Plugs, Receptacles and Couplers for Electric Vehicles
+•UL2231 Standard for Personnel Protection Systems for Electric Vehicle (EV) Supply Circuits
+•SAE J1772™ Electric Vehicle Conductive Charge Coupler Standard
+•NEC Article 625 Electric Vehicle Charging System Equipment
+
+==Power interlock==
+OpenEVSE includes an interlock that de-energizes the electric vehicle connector and cable whenever the electrical connector is uncoupled from the electric vehicle (NEC 625.18)
+
+==Pilot Signal==
+OpenEVSE supports the SAE J1772 pilot signal which provides an automatic means to de-energize the cable conductors and electric vehicle connector upon exposure to strain that could result in either cable rupture or separation of the cable from the electric connector and exposure of live parts (NEC 625.19) (SAE J1772)
+
+==Self Check==
+OpenEVSE performs a Self-Testing sequence during start up to ensures unit is working properly and safely upon power-up OpenEVSE checks for: 
+
+  * GFCI--Ability to respond to a 20mA ground fault
+  * Missing Ground
+  * Welded Relay Contact Monitor
+
+==Ground Monitoring==
+
+OpenEVSE checks ground an power-up and constantly monitors for presence of proper safety ground.
+
+==Ground Fault Interrupt==
+OpenEVSE includes mandatory Ground Fault Interruption with a 20ma trip in all models available for protection against electric shock of personnel. (NEC 625.22) (SAE J1772) (UL 2231)
+
+==Stuck Relay detection==
+OpenEVSE checks relay contacts on Power up to ensure relays are functioning properly and providing proper Power interlock.
+
+==Electric Vehicle Identification==
+OpenEVSE verify the pilot signal integrity by checking the Electric Vehicle Diode. The pilot signal must BOTH be at the correct resistance AND pass the "diode check" to activate the circuit. (SAE J1772)
+
+*Note* - This safety feature is commonly left out of commercial charging stations 
+
+==Ventilation Required==
+OpenEVSE checks for the Ventilation required request from Electric Vehicles. OpenEVSE will deny charging if ventilation is not available or allow if charging station is equipped to activate ventilation. (SAE J1772)
+
+*Note* - This safety feature is commonly left out of commercial charging stations 
  
