--- a/wiki/Users_Guide.wiki
+++ b/wiki/Users_Guide.wiki
@@ -87,10 +87,10 @@ OpenEVSE supports all the safety features required (and a few more) by standards
 •NEC Article 625 Electric Vehicle Charging System Equipment
 
 ==Power interlock==
-OpenEVSE includes an interlock that de-energizes the electric vehicle connector and cable whenever the electrical connector is uncoupled from the electric vehicle (NEC 625.18)
+OpenEVSE includes an interlock that de-energizes the electric vehicle connector and cable whenever the electrical connector is uncoupled from the electric vehicle *(NEC 625.18)*
 
 ==Pilot Signal==
-OpenEVSE supports the SAE J1772 pilot signal which provides an automatic means to de-energize the cable conductors and electric vehicle connector upon exposure to strain that could result in either cable rupture or separation of the cable from the electric connector and exposure of live parts (NEC 625.19) (SAE J1772)
+OpenEVSE supports the SAE J1772 pilot signal which provides an automatic means to de-energize the cable conductors and electric vehicle connector upon exposure to strain that could result in either cable rupture or separation of the cable from the electric connector and exposure of live parts *(NEC 625.19) (SAE J1772)*
 
 ==Self Check==
 OpenEVSE performs a Self-Testing sequence during start up to ensures unit is working properly and safely upon power-up OpenEVSE checks for:
@@ -105,21 +105,21 @@ OpenEVSE performs a Self-Testing sequence during start up to ensures unit is wor
 
 ==Ground Monitoring==
 
-OpenEVSE checks ground an power-up and constantly monitors for presence of proper safety ground.
+OpenEVSE checks ground an power-up and constantly monitors for presence of proper safety ground. *(SAE J1772)*
 
 ==Ground Fault Interrupt==
-OpenEVSE includes mandatory Ground Fault Interruption with a 20ma trip in all models available for protection against electric shock of personnel. (NEC 625.22) (SAE J1772) (UL 2231)
+OpenEVSE includes mandatory Ground Fault Interruption with a 20ma trip in all models available for protection against electric shock of personnel. *(NEC 625.22) (SAE J1772) (UL 2231)*
 
 ==Stuck Relay detection==
 OpenEVSE checks relay contacts on Power up to ensure relays are functioning properly and providing proper Power interlock.
 
 ==Electric Vehicle Identification==
-OpenEVSE verify the pilot signal integrity by checking the Electric Vehicle Diode. The pilot signal must BOTH be at the correct resistance AND pass the "diode check" to activate the circuit. (SAE J1772)
+OpenEVSE verify the pilot signal integrity by checking the Electric Vehicle Diode. The pilot signal must BOTH be at the correct resistance AND pass the "diode check" to activate the circuit. *(SAE J1772)*
 
 *Note* - This safety feature is commonly left out of commercial charging stations 
 
 ==Ventilation Required==
-OpenEVSE checks for the Ventilation required request from Electric Vehicles. OpenEVSE will deny charging if ventilation is not available or allow if charging station is equipped to activate ventilation. (SAE J1772)
+OpenEVSE checks for the Ventilation required request from Electric Vehicles. OpenEVSE will deny charging if ventilation is not available or allow if charging station is equipped to activate ventilation. *(SAE J1772)*
 
 *Note* - This safety feature is commonly left out of commercial charging stations 
  
